--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master, dev ]
 
 jobs:
-  build-8.6.3-ubuntu-latest:
+  build863:
 
     runs-on: ubuntu-latest
 
@@ -39,7 +39,7 @@ jobs:
     - name: Run tests
       run: cabal test all
       
-  build-8.8.3-ubuntu-latest:
+  build883:
 
     runs-on: ubuntu-latest
 
