--- a/cronus.cabal
+++ b/cronus.cabal
@@ -14,6 +14,10 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 tested-with: GHC ==8.6.1 || ==8.6.2 || ==8.6.3 || ==8.8.1 || ==8.8.2 || ==8.8.3 || ==8.10.1
 
+source-repository head
+  type: git 
+  location: https://github.com/samuelschlesinger/cronus
+
 library
   exposed-modules:
     Cronus,
