--- a/cronus.cabal
+++ b/cronus.cabal
@@ -41,17 +41,17 @@ library
   other-extensions:
     NoImplicitPrelude
   build-depends:
-    base >=4.5 && <5,
-    deepseq >=1.4,
-    text >=1.0,
+    base >=4.10 && <5,
+    deepseq >=1.4 && <1.5,
+    text >=1.0 && <1.3,
     bytestring >= 0.8,
-    containers >= 0.6,
-    unordered-containers >= 0.2,
-    hashable >= 1.0,
-    transformers >=0.5.6,
-    mtl >=2.2,
-    profunctors >=5.5,
-    vector >=0.10,
-    comonad >=5.0
+    containers >= 0.6 && <0.7,
+    unordered-containers >=0.2 && <0.3,
+    hashable >=1.0 && <1.4,
+    transformers >=0.5.6 && <0.5.7,
+    mtl >=2.2 && <2.3,
+    profunctors >=5.5 && <5.6,
+    vector >=0.10 && <0.13,
+    comonad >=5.0 && <5.1
   default-language:
     Haskell2010
